fix: inserita logica per nominare admin
