# tyb_backend/src/main/java/com/tyb/tyb_backend/controller/UserController.java
@@ -1,9 +1,7 @@
 package com.tyb.tyb_backend.controller;
 
-import com.tyb.tyb_backend.dto.DeleteUserDto;
+import com.tyb.tyb_backend.dto.*;
 import com.tyb.tyb_backend.dto.Esito.Esito;
-import com.tyb.tyb_backend.dto.ChangePasswordDto;
-import com.tyb.tyb_backend.dto.ResultUserResponse;
 import com.tyb.tyb_backend.model.User;
 import com.tyb.tyb_backend.service.UserService;
 import jakarta.validation.Valid;
@@ -52,5 +50,17 @@ public class UserController {
 
         // Chiama il servizio per ottenere i dettagli dell'utente e ritorna la risposta
         return new ResponseEntity<>(userService.getUser(user), HttpStatus.OK);
+    }
+
+    @PostMapping(value = "/add-admin", produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<Esito> addAdmin(@RequestBody AddAdminDto dto) {
+        Logger.getGlobal().info("**************** Aggiungo admin ***************");
+        return new ResponseEntity<>(userService.addAdmin(dto), HttpStatus.OK);
+    }
+
+    @GetMapping(value = "/get-admins", produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResultAdminsResponse getAdmins() {
+        Logger.getGlobal().info("**************** Recupero gli admin ***************");
+        return userService.getAdmins();
     }
 }
